--- a/src/locales/pl.json
+++ b/src/locales/pl.json
@@ -1,7 +1,70 @@
 {
+  "nav.orderForm": "Zamów formularze",
+  "footer.slogan1": "Nowoczesna opieka lekarza rodzinnego",
+  "footer.slogan2": "na najwyższym poziomie.",
+  "footer.openingHours": "Godziny otwarcia",
+  "footer.opening.monThu": "Pon–Czw: 07:30–12:00 & 14:30–18:00",
+  "footer.opening.fri": "Pt: 07:30–12:00",
+  "footer.opening.friNote": "tylko konsultacje online",
+  "footer.contact": "Kontakt",
+  "footer.phone1": "T: +49 69 870015360",
+  "footer.phone2": "T: +49 69 84 20 81",
+  "footer.fax": "F: +49 69 84 49 72",
+  "footer.email": "E: info@praxiskerim.de",
+  "footer.addressTitle": "Adres",
+  "footer.address1": "Jacques-Offenbach-Straße 12",
+  "footer.address2": "63069 Offenbach am Main",
+  "footer.copyright": "Przychodnia dr Kerima – Wszelkie prawa zastrzeżone",
+  "nav.home": "Strona główna",
+  "nav.services": "Usługi",
+  "nav.about": "O nas",
+  "nav.contact": "Kontakt",
+  "nav.appointment": "Umów wizytę",
+  "bestellung.heroTitle": "Formularze zamówień",
+  "bestellung.infoTitle": "Nowy system zamówień w przygotowaniu",
+  "bestellung.infoText": "Obecnie tworzymy nowy system online do zamawiania recept, skierowań i zwolnień lekarskich.\nDo tego czasu skorzystaj z poniższych form kontaktu:",
+  "bestellung.emailButton": "E-mail",
+  "bestellung.phoneButton": "Telefon: +49 69 870015360"
+  ,
   "allgemeinmedizin.heroTitle": "Medycyna ogólna",
   "allgemeinmedizin.heroText": "Medycyna ogólna to serce naszej praktyki. Jesteśmy Twoim pierwszym punktem kontaktu w sprawach zdrowotnych – zarówno w przypadku ostrych dolegliwości, chorób przewlekłych, jak i profilaktyki. Dzięki nowoczesnej diagnostyce, osobistemu podejściu i wieloletniemu doświadczeniu wspieramy Ciebie i Twoją rodzinę w każdej sytuacji.",
   "allgemeinmedizin.focusTitle": "Nasze obszary specjalizacji",
+    "homepage.title": "Przychodnia dr Kerima",
+    "homepage.subtitle": "Międzynarodowa opieka lekarza rodzinnego na najwyższym naukowym poziomie",
+    "hero.title": "Przychodnia dr Kerima",
+    "hero.subtitle": "Opieka lekarza rodzinnego na niemieckim poziomie w Bułgarii",
+    "home.servicesTitle": "Nasze usługi",
+    "home.service1.title": "Medycyna ogólna",
+    "home.service1.desc": "Kompleksowa opieka dla wszystkich grup wiekowych.",
+    "home.service2.title": "Chirurgia",
+    "home.service2.desc": "Nowoczesne zabiegi chirurgiczne.",
+    "home.service3.title": "Medycyna wewnętrzna",
+    "home.service3.desc": "Diagnostyka i leczenie chorób wewnętrznych.",
+    "home.locationsTitle": "Nasze lokalizacje",
+    "home.location1.title": "Klinika Sofia",
+    "home.location1.desc": "Centralna lokalizacja w Sofii.",
+    "home.location2.title": "Klinika Płowdiw",
+    "home.location2.desc": "Opieka w regionie Płowdiw.",
+    "home.location3.title": "Klinika Warna",
+    "home.location3.desc": "Opieka na wybrzeżu Morza Czarnego.",
+    "home.teamTitle": "Nasz zespół",
+    "home.team1.name": "Dr Kerim",
+    "home.team1.specialty": "Lekarz rodzinny",
+    "home.team2.name": "Dr Ivanova",
+    "home.team2.specialty": "Chirurg",
+    "home.team3.name": "Dr Petrov",
+    "home.team3.specialty": "Medycyna wewnętrzna",
+  "about.info": "Nasza klinika oferuje wysokiej jakości opiekę z indywidualnym podejściem.",
+  "about.title": "O naszej przychodni",
+    "about.description": "W Przychodni dr Kerima oferujemy nowoczesną opiekę lekarza rodzinnego zgodnie z najwyższymi standardami naukowymi. Nasz międzynarodowy zespół zapewnia kompleksową opiekę – od profilaktyki i diagnostyki po leczenie ostre i długoterminowe. Cenimy sobie indywidualne podejście, szybki kontakt i usługi cyfrowe, takie jak wideokonsultacje i zamówienia online.",
+    "services.info": "Oferujemy szeroki zakres usług medycznych dla Twojego zdrowia i dobrego samopoczucia.",
+    "appointment.info": "Umów wizytę łatwo online lub telefonicznie.",
+    "service1.title": "Usługa 1",
+    "service1.info": "Szczegóły dotyczące usługi 1.",
+    "service2.title": "Usługa 2",
+    "service2.info": "Szczegóły dotyczące usługi 2.",
+    "service3.title": "Usługa 3",
+    "service3.info": "Szczegóły dotyczące usługi 3.",
   "allgemeinmedizin.focus1": "Opieka doraźna przy infekcjach, urazach i bólu",
   "allgemeinmedizin.focus2": "Leczenie nadciśnienia, cukrzycy i chorób sercowo-naczyniowych",
   "allgemeinmedizin.focus3": "Opieka nad dziećmi, dorosłymi i seniorami",
@@ -15,86 +78,74 @@
   "allgemeinmedizin.chronicTitle": "Choroby przewlekłe i opieka długoterminowa",
   "allgemeinmedizin.chronicText1": "Wiele osób żyje z chorobami przewlekłymi, takimi jak cukrzyca, astma czy choroby sercowo-naczyniowe. Ciągła, niezawodna opieka jest kluczowa dla jakości życia.",
   "allgemeinmedizin.chronicText2": "Wspieramy naszych pacjentów długoterminowo, indywidualnie dostosowujemy plany leczenia i ściśle współpracujemy ze specjalistami. Dzięki temu masz pewność, że nawet w złożonych przypadkach chorobowych otrzymasz optymalną opiekę.",
-  "innereMedizin.heroTitle": "",
-  "innereMedizin.heroText": "",
-  "innereMedizin.diagnosticsTitle": "",
-  "innereMedizin.diagnostics1": "",
-  "innereMedizin.diagnostics2": "",
-  "innereMedizin.diagnostics3": "",
-  "innereMedizin.diagnostics4": "",
-  "innereMedizin.diagnostics5": "",
-  "innereMedizin.diagnostics6": "",
-  "innereMedizin.diagnostics7": "",
-  "innereMedizin.diagnostics8": "",
-  "innereMedizin.preventionTitle": "",
-  "innereMedizin.preventionText": "",
-  "innereMedizin.therapyTitle": "",
-  "innereMedizin.therapyText1": "",
-  "innereMedizin.therapyText2": "",
-  "chirurgie.heroTitle": "",
-  "chirurgie.heroText": "",
-  "chirurgie.proceduresTitle": "",
-  "chirurgie.procedure1": "",
-  "chirurgie.procedure2": "",
-  "chirurgie.procedure3": "",
-  "chirurgie.procedure4": "",
-  "chirurgie.procedure5": "",
-  "chirurgie.procedure6": "",
-  "chirurgie.procedure7": "",
-  "chirurgie.procedure8": "",
-  "chirurgie.woundTitle": "",
-  "chirurgie.woundText": "",
-  "chirurgie.jointTitle": "",
-  "chirurgie.jointText1": "",
-  "chirurgie.jointText2": "",
-  "beschneidungen.heroTitle": "",
-  "beschneidungen.heroText": "",
-  "beschneidungen.reasonsTitle": "",
-  "beschneidungen.reason1": "",
-  "beschneidungen.reason2": "",
-  "beschneidungen.reason3": "",
-  "beschneidungen.reason4": "",
-  "beschneidungen.reason5": "",
-  "beschneidungen.reason6": "",
-  "beschneidungen.processTitle": "",
-  "beschneidungen.processText": "",
-  "beschneidungen.aftercareTitle": "",
-  "beschneidungen.aftercareText1": "",
-  "beschneidungen.aftercareText2": "",
-  "ueberuns.whoTitle": "",
-  "ueberuns.whoText1": "",
-  "ueberuns.whoText2": "",
-  "ueberuns.whoText3": "",
-  "ueberuns.philosophieTitle": "",
-  "ueberuns.philosophieText": "",
-  "ueberuns.value1Title": "",
-  "ueberuns.value1Text": "",
-  "ueberuns.value2Title": "",
-  "ueberuns.value2Text": "",
-  "ueberuns.value3Title": "",
-  "ueberuns.value3Text": "",
-  "ueberuns.chiefsTitle": "",
-  "ueberuns.chief1Name": "",
-  "ueberuns.chief1Text": "",
-  "ueberuns.chief1List1": "",
-  "ueberuns.chief1List2": "",
-  "ueberuns.chief1List3": "",
-  "ueberuns.chief2Name": "",
-  "ueberuns.chief2Text": "",
-  "ueberuns.chief2List1": "",
-  "ueberuns.chief2List2": "",
-  "ueberuns.chief2List3": "",
-  "ueberuns.equipmentTitle": "",
-  "ueberuns.equipmentText": "",
-  "ueberuns.team1Name": "",
-  "ueberuns.team1Role": "",
-  "ueberuns.team1Lang": "",
-  "ueberuns.team2Name": "",
-  "ueberuns.team2Role": "",
-  "ueberuns.team2Lang": "",
-  "ueberuns.team3Name": "",
-  "ueberuns.team3Role": "",
-  "ueberuns.team3Lang": "",
+  
+  "innereMedizin.heroTitle": "Medycyna wewnętrzna",
+  "innereMedizin.heroText": "Nasz oddział medycyny wewnętrznej łączy najnowocześniejszą diagnostykę, solidne doświadczenie i indywidualną opiekę. Zajmujemy się chorobami narządów wewnętrznych, takich jak serce, płuca, wątroba, nerki i metabolizm – od ostrych dolegliwości po długoterminową terapię.",
+  "innereMedizin.diagnosticsTitle": "Diagnostyka i badania funkcjonalne",
+  "innereMedizin.diagnostics1": "EKG i długoterminowe EKG",
+  "innereMedizin.diagnostics2": "24-godzinny pomiar ciśnienia krwi",
+  "innereMedizin.diagnostics3": "Badanie czynności płuc (spirometria)",
+  "innereMedizin.diagnostics4": "Testy wysiłkowe",
+  "innereMedizin.diagnostics5": "USG narządów jamy brzusznej i tarczycy",
+  "innereMedizin.diagnostics6": "Badania krwi w naszym laboratorium",
+  "innereMedizin.diagnostics7": "Diagnostyka sercowo-naczyniowa",
+  "innereMedizin.diagnostics8": "Profilaktyczne badania zgodne z wytycznymi",
+  "innereMedizin.preventionTitle": "Profilaktyka i wczesne wykrywanie",
+  "innereMedizin.preventionText": "Choroby takie jak nadciśnienie, cukrzyca czy zaburzenia rytmu serca często rozwijają się podstępnie. Regularne badania profilaktyczne są kluczem do wczesnego wykrycia. Oferujemy przeglądy, programy przesiewowe i porady dotyczące czynników ryzyka – abyś długo cieszył się zdrowiem.",
+  "innereMedizin.therapyTitle": "Terapia i opieka długoterminowa",
+  "innereMedizin.therapyText1": "Wspieramy naszych pacjentów nie tylko w ostrych chorobach, ale także w przewlekłych przebiegach. Opracowujemy indywidualne plany leczenia i regularnie dostosowujemy je do aktualnego stanu zdrowia.",
+  "innereMedizin.therapyText2": "W przypadku złożonych przypadków klinicznych ściśle współpracujemy ze specjalistami, aby zapewnić optymalną opiekę. Dzięki temu masz pewność, że otrzymasz najlepszą możliwą opiekę medyczną na dłuższą metę.",
+  "chirurgie.heroTitle": "Chirurgia",
+  "chirurgie.heroText": "W naszej praktyce oferujemy szeroki zakres drobnych zabiegów chirurgicznych. Od opieki nad ranami po iniekcje stawowe – leczymy na miejscu zgodnie z najwyższymi standardami medycznymi.",
+  "chirurgie.proceduresTitle": "Drobne zabiegi chirurgiczne",
+  "chirurgie.procedure1": "Usuwanie zmian skórnych (np. brodawki, znamiona)",
+  "chirurgie.procedure2": "Leczenie ropni i stanów zapalnych",
+  "chirurgie.procedure3": "Leczenie drobnych skaleczeń i ran szarpanych",
+  "chirurgie.procedure4": "Usuwanie tłuszczaków i torbieli",
+  "chirurgie.procedure5": "Chirurgia paznokci (np. wrastające paznokcie)",
+  "chirurgie.procedure6": "Pobieranie małych próbek tkanek (biopsje)",
+  "chirurgie.procedure7": "Opieka po drobnych urazach",
+  "chirurgie.procedure8": "Opieka po zabiegach ambulatoryjnych",
+  "chirurgie.woundTitle": "Opieka nad ranami i rany przewlekłe",
+  "chirurgie.woundText": "Ostre i przewlekłe rany wymagają profesjonalnego, często długoterminowego leczenia. Zajmujemy się skaleczeniami, ranami szarpanymi i otarciami, opiekujemy się oparzeniami oraz prowadzimy nowoczesną terapię ran przewlekłych (np. owrzodzenia nóg, zespół stopy cukrzycowej). Stosujemy indywidualnie dobrane metody i ściśle współpracujemy z ośrodkami specjalistycznymi, jeśli potrzebna jest dalsza opieka.",
+  "chirurgie.jointTitle": "Iniekcje stawowe i opieka po zabiegach",
+  "chirurgie.jointText1": "Bóle stawów spowodowane artrozą, stanami zapalnymi lub urazami można skutecznie leczyć za pomocą celowanych iniekcji.",
+  "chirurgie.jointText2": "Oferujemy iniekcje stawowe z lekami przeciwzapalnymi lub kwasem hialuronowym i towarzyszymy Ci przez cały okres leczenia, zapewniając ścisłą kontrolę i opiekę.",
+  "ueberuns.whoTitle": "Kim jesteśmy",
+  "ueberuns.whoText1": "Przychodnia dr Kerima to nowoczesna, zorientowana na pacjenta opieka rodzinna zgodna z najwyższymi standardami naukowymi. Naszym celem jest być niezawodnym partnerem dla Ciebie i Twojej rodziny we wszystkich sprawach zdrowotnych – od profilaktyki po leczenie ostre i długoterminową opiekę nad chorobami przewlekłymi.",
+  "ueberuns.whoText2": "Nasz międzynarodowy zespół lekarzy łączy wieloletnie doświadczenie z różnych specjalności medycznych. Korzystamy z najnowocześniejszej diagnostyki, usług cyfrowych i osobistej, empatycznej opieki. W naszej praktyce jesteś nie tylko pacjentem, ale człowiekiem – z indywidualnymi potrzebami i okolicznościami.",
+  "ueberuns.whoText3": "Mówimy w kilku językach i przywiązujemy dużą wagę do otwartej, zaufanej komunikacji. Twoje zdrowie i dobre samopoczucie są dla nas najważniejsze.",
+  "ueberuns.philosophieTitle": "Nasza filozofia i wartości",
+  "ueberuns.philosophieText": "Zdrowie traktujemy całościowo: profilaktyka, szybka diagnostyka i indywidualna terapia są naszym priorytetem. Naszym celem jest połączenie najnowocześniejszej medycyny z osobistą opieką, aby nasi pacjenci byli dobrze zaopiekowani nie tylko medycznie, ale także osobiście.",
+  "ueberuns.value1Title": "Holizm",
+  "ueberuns.value1Text": "Postrzegamy człowieka jako jedność ciała, umysłu i duszy. Profilaktyka, diagnostyka i terapia są indywidualnie dostosowane do Ciebie.",
+  "ueberuns.value2Title": "Innowacja",
+  "ueberuns.value2Text": "Wykorzystujemy nowoczesną technologię, usługi cyfrowe i najnowsze odkrycia naukowe dla Twojej optymalnej opieki.",
+  "ueberuns.value3Title": "Empatia",
+  "ueberuns.value3Text": "Poświęcamy czas, słuchamy i traktujemy Cię z szacunkiem i uznaniem – niezależnie od pochodzenia, wieku czy sytuacji życiowej.",
+  "ueberuns.chiefsTitle": "Ordynatorzy",
+  "ueberuns.chief1Name": "Dr. med. Bahtiyar Kerim, MHBA",
+  "ueberuns.chief1Text": "Specjalista medycyny rodzinnej ze szczególnym uwzględnieniem diagnostyki wewnętrznej i medycyny ratunkowej. Dr Kerim znany jest z precyzyjnej diagnostyki, spokojnego usposobienia i umiejętności zachowania zimnej krwi nawet w trudnych sytuacjach. Angażuje się w ciągłe szkolenie zespołu i wprowadzanie innowacyjnych metod leczenia.",
+  "ueberuns.chief1List1": "Wieloletnie doświadczenie w klinice i praktyce",
+  "ueberuns.chief1List2": "Członek kilku towarzystw medycznych",
+  "ueberuns.chief1List3": "Mówi po niemiecku, bułgarsku, turecku, angielsku, serbsko-chorwacku",
+  "ueberuns.chief2Name": "Mag. med. univ. Sof. Ibrahim Kerim",
+  "ueberuns.chief2Text": "Specjalista medycyny rodzinnej ze szczególnym uwzględnieniem zabiegów chirurgicznych i diagnostyki. Dr Ibrahim Kerim łączy precyzyjną pracę z dużą empatią. Pacjenci cenią sobie jego otwartą komunikację i staranną opiekę po zabiegach.",
+  "ueberuns.chief2List1": "Doświadczenie w opiece ambulatoryjnej i szpitalnej",
+  "ueberuns.chief2List2": "Regularne szkolenia z zakresu chirurgii",
+  "ueberuns.chief2List3": "Mówi po niemiecku, bułgarsku, turecku, angielsku, serbsko-chorwacku",
+  "ueberuns.equipmentTitle": "Nasze wyposażenie i zespół",
+  "ueberuns.equipmentText": "Nasza praktyka jest wyposażona w nowoczesną technologię medyczną: USG, EKG, badania czynności płuc, cyfrowe RTG i wiele innych. Nasz przyjazny zespół asystentów medycznych dba o sprawny przebieg i przyjemną atmosferę.",
+  "ueberuns.team1Name": "Georg Rumin",
+  "ueberuns.team1Role": "Medycyna ogólna / Akupunktura",
+  "ueberuns.team1Lang": "Mówi po niemiecku, polsku",
+  "ueberuns.team2Name": "Günay Najafova",
+  "ueberuns.team2Role": "Medycyna ogólna",
+  
+  "ueberuns.team2Lang": "Mówi po niemiecku, turecku, azerbejdżańsku, rosyjsku",
+  "ueberuns.team3Name": "Bülent Alkan",
+  "ueberuns.team3Role": "Medycyna ogólna",
+  "ueberuns.team3Lang": "Mówi po bułgarsku, turecku, niemiecku",
   "leistungen.title": "Nasze usługi",
   "leistungen.allgemeinmedizin.title": "Medycyna ogólna",
   "leistungen.allgemeinmedizin.desc": "Opieka lekarza rodzinnego, badania profilaktyczne i opieka doraźna dla całej rodziny.",
@@ -121,18 +172,6 @@
   "kontakt.welcome": "Witamy w Przychodni dr Kerima",
   "kontakt.appointmentTitle": "Umów wizytę",
   "kontakt.appointmentInfo": "Dbamy o Twoje zdrowie. Umów wizytę online – na badania, ostre dolegliwości lub konsultacje. Nasz cyfrowy system rezerwacji umożliwia szybkie i łatwe planowanie, minimalizując czas oczekiwania.",
-  "footer.openingHours": "Godziny otwarcia",
-  "footer.opening.monThu": "Pon–Czw: 07:30–12:00 & 14:30–18:00",
-  "footer.opening.fri": "Pt: 07:30–12:00",
-  "footer.opening.friNote": "tylko konsultacje online",
-  "footer.addressTitle": "Adres",
-  "footer.address1": "Jacques-Offenbach-Straße 12",
-  "footer.address2": "63069 Offenbach am Main",
-  "footer.contact": "Kontakt",
-  "footer.phone1": "T: +49 69 870015360",
-  "footer.phone2": "T: +49 69 84 20 81",
-  "footer.fax": "F: +49 69 84 49 72",
-  "footer.email": "E: info@praxiskerim.de",
   "pageindicator.home": "Strona główna",
   "pageindicator.allgemeinmedizin": "Medycyna ogólna",
   "pageindicator.innere_medizin": "Medycyna wewnętrzna",
@@ -141,11 +180,6 @@
   "pageindicator.ueber_uns": "O nas",
   "pageindicator.kontakt": "Kontakt",
   "pageindicator.termin_buchen": "Umów wizytę",
-  "nav.appointment": "Umów wizytę",
-  "nav.home": "Strona główna",
-  "nav.services": "Usługi",
-  "nav.about": "O nas",
-  "nav.contact": "Kontakt",
   "allgemeinmedizin": "Medycyna ogólna",
   "innere_medizin": "Medycyna wewnętrzna",
   "chirurgie": "Chirurgia",
@@ -153,5 +187,26 @@
   "kontakt.digitalTitle": "Usługi cyfrowe",
   "kontakt.digitalInfo": "Skorzystaj z naszych usług cyfrowych, aby szybko i wygodnie uzyskać pomoc – zamów recepty, skierowania lub zwolnienia online albo bądź na bieżąco przez nasz kanał WhatsApp.",
   "about.orderForm": "Formularz zamówienia",
-  "about.whatsappChannel": "Kanał WhatsApp"
+  "about.whatsappChannel": "Kanał WhatsApp",
+  "beschneidungen.heroTitle": "Obrzezania",
+  "beschneidungen.heroText": "W naszej praktyce wykonujemy profesjonalne obrzezania najnowocześniejszymi metodami i z zachowaniem najwyższych standardów medycznych. Kładziemy duży nacisk na indywidualne podejście, delikatny przebieg zabiegu i staranną opiekę pooperacyjną.",
+  "beschneidungen.reasonsTitle": "Wskazania medyczne i kulturowe",
+  "beschneidungen.reason1": "Wskazania medyczne (np. stulejka, przewlekłe stany zapalne)",
+  "beschneidungen.reason2": "Poprawa higieny",
+  "beschneidungen.reason3": "Zmniejszenie ryzyka niektórych infekcji",
+  "beschneidungen.reason4": "Powody kulturowe i religijne",
+  "beschneidungen.reason5": "Uwarunkowania rodzinne i tradycyjne",
+  "beschneidungen.reason6": "Zabieg według indywidualnych życzeń",
+  "beschneidungen.processTitle": "Przebieg i bezpieczeństwo",
+  "beschneidungen.processText": "Przed zabiegiem odbywa się szczegółowa konsultacja, podczas której odpowiadamy na wszystkie pytania. Sam zabieg przeprowadzany jest w sterylnych warunkach i z zastosowaniem delikatnego znieczulenia. Kładziemy największy nacisk na bezpieczeństwo, bezbolesność i zaufaną atmosferę dla naszych pacjentów.",
+  "beschneidungen.aftercareTitle": "Opieka po zabiegu",
+  "beschneidungen.aftercareText1": "Po obrzezaniu kluczowa jest staranna opieka pooperacyjna. Zapewniamy regularne kontrole i jesteśmy do dyspozycji w razie pytań.",
+  "beschneidungen.aftercareText2": "Celem jest szybkie gojenie, jak najlepsze efekty i maksymalne bezpieczeństwo. W razie potrzeby indywidualnie dostosowujemy leczenie do przebiegu gojenia.",
+  "terminbuchung.heroTitle": "Rezerwacja wizyty",
+  "terminbuchung.infoTitle": "Informacje o rezerwacji",
+  "terminbuchung.infoText1": "Aby umówić wizytę, skorzystaj z poniższych opcji kontaktu.",
+  "terminbuchung.infoText2": "Możesz napisać do nas przez WhatsApp, e-mail lub zadzwonić.",
+  "terminbuchung.whatsappButton": "Napisz na WhatsApp",
+  "terminbuchung.emailButton": "Wyślij e-mail",
+  "terminbuchung.phoneButton": "Zadzwoń"
 }
