--- a/src/locales/tr.json
+++ b/src/locales/tr.json
@@ -1,100 +1,109 @@
-{
+  {
+  "nav.orderForm": "Formüler siparişi",
   "allgemeinmedizin.heroTitle": "Aile Hekimliği",
-  "allgemeinmedizin.heroText": "Aile hekimliği, kliniğimizin kalbidir. Akut şikayetler, kronik hastalıklar veya koruyucu sağlık hizmetleri olsun, tüm sağlık sorularınızda ilk başvuru noktanız biziz. Modern tanı yöntemleri, kişisel ilgi ve yılların deneyimiyle sizi ve ailenizi her durumda destekliyoruz.",
-  "allgemeinmedizin.focusTitle": "Odak Alanlarımız",
-  "allgemeinmedizin.focus1": "Enfeksiyonlar, yaralanmalar ve ağrılar için akut bakım",
+  "allgemeinmedizin.heroText": "Aile hekimliği uygulamamızın kalbidir. Akut şikayetler, kronik hastalıklar veya koruyucu sağlık hizmetleri için ilk başvuru noktanızız. Modern tanı, kişisel ilgi ve uzun yıllara dayanan deneyimle sizi ve ailenizi her durumda destekliyoruz.",
+  "allgemeinmedizin.focusTitle": "Ana Odak Alanlarımız",
+  "allgemeinmedizin.focus1": "Enfeksiyonlar, yaralanmalar ve ağrılar için acil bakım",
   "allgemeinmedizin.focus2": "Yüksek tansiyon, diyabet ve kalp-damar hastalıklarının tedavisi",
   "allgemeinmedizin.focus3": "Çocuklar, yetişkinler ve yaşlılar için bakım",
   "allgemeinmedizin.focus4": "STIKO önerilerine göre aşılar",
   "allgemeinmedizin.focus5": "Sağlık kontrolleri ve koruyucu muayeneler",
   "allgemeinmedizin.focus6": "Seyahat tıbbı danışmanlığı ve aşılar",
-  "allgemeinmedizin.focus7": "Klinikte doğrudan küçük yara bakımı",
+  "allgemeinmedizin.focus7": "Muayenehanede küçük yara bakımı",
   "allgemeinmedizin.focus8": "Gerektiğinde ve randevu ile ev ziyaretleri",
-  "allgemeinmedizin.preventionTitle": "Koruyucu Sağlık & Önlem",
-  "allgemeinmedizin.preventionText": "Önlem, tedaviden iyidir. Kliniğimizde düzenli koruyucu muayeneler, tarama programları ve sağlık kontrolleri sunuyoruz. Amaç, hastalıkları erken tespit etmek ve hedefe yönelik önlemlerle önlemektir. Buna cilt kanseri taramaları, temel kardiyolojik muayeneler, kan testleri ve beslenme, egzersiz ve yaşam tarzı danışmanlığı dahildir.",
-  "allgemeinmedizin.chronicTitle": "Kronik Hastalıklar & Uzun Süreli Bakım",
+  "allgemeinmedizin.preventionTitle": "Koruyucu Sağlık ve Önleme",
+  "allgemeinmedizin.preventionText": "Önleme, tedaviden daha iyidir. Uygulamamızda düzenli koruyucu muayeneler, tarama programları ve sağlık kontrolleri sunuyoruz. Amaç, hastalıkları erken tespit etmek ve hedefe yönelik önlemlerle önlemektir. Buna cilt kanseri taramaları, temel kardiyolojik muayeneler, kan testleri ve beslenme, hareket ve yaşam tarzı danışmanlığı dahildir.",
+  "allgemeinmedizin.chronicTitle": "Kronik Hastalıklar ve Uzun Süreli Bakım",
   "allgemeinmedizin.chronicText1": "Birçok insan diyabet, astım veya kalp-damar hastalıkları gibi kronik hastalıklarla yaşamaktadır. Sürekli ve güvenilir bakım, yaşam kalitesi için çok önemlidir.",
-  "allgemeinmedizin.chronicText2": "Hastalarımıza uzun vadede destek oluyor, tedavi planlarını bireysel olarak uyarlıyor ve uzmanlarla yakın işbirliği içinde çalışıyoruz. Böylece karmaşık hastalık süreçlerinde bile en iyi şekilde bakıldığınızdan emin oluyoruz.",
-  "innereMedizin.heroTitle": "",
-  "innereMedizin.heroText": "",
-  "innereMedizin.diagnosticsTitle": "",
-  "innereMedizin.diagnostics1": "",
-  "innereMedizin.diagnostics2": "",
-  "innereMedizin.diagnostics3": "",
-  "innereMedizin.diagnostics4": "",
-  "innereMedizin.diagnostics5": "",
-  "innereMedizin.diagnostics6": "",
-  "innereMedizin.diagnostics7": "",
-  "innereMedizin.diagnostics8": "",
-  "innereMedizin.preventionTitle": "",
-  "innereMedizin.preventionText": "",
-  "innereMedizin.therapyTitle": "",
-  "innereMedizin.therapyText1": "",
-  "innereMedizin.therapyText2": "",
-  "chirurgie.heroTitle": "",
-  "chirurgie.heroText": "",
-  "chirurgie.proceduresTitle": "",
-  "chirurgie.procedure1": "",
-  "chirurgie.procedure2": "",
-  "chirurgie.procedure3": "",
-  "chirurgie.procedure4": "",
-  "chirurgie.procedure5": "",
-  "chirurgie.procedure6": "",
-  "chirurgie.procedure7": "",
-  "chirurgie.procedure8": "",
-  "chirurgie.woundTitle": "",
-  "chirurgie.woundText": "",
-  "chirurgie.jointTitle": "",
-  "chirurgie.jointText1": "",
-  "chirurgie.jointText2": "",
-  "beschneidungen.heroTitle": "",
-  "beschneidungen.heroText": "",
-  "beschneidungen.reasonsTitle": "",
-  "beschneidungen.reason1": "",
-  "beschneidungen.reason2": "",
-  "beschneidungen.reason3": "",
-  "beschneidungen.reason4": "",
-  "beschneidungen.reason5": "",
-  "beschneidungen.reason6": "",
-  "beschneidungen.processTitle": "",
-  "beschneidungen.processText": "",
-  "beschneidungen.aftercareTitle": "",
-  "beschneidungen.aftercareText1": "",
-  "beschneidungen.aftercareText2": "",
-  "ueberuns.whoTitle": "",
-  "ueberuns.whoText1": "",
-  "ueberuns.whoText2": "",
-  "ueberuns.whoText3": "",
-  "ueberuns.philosophieTitle": "",
-  "ueberuns.philosophieText": "",
-  "ueberuns.value1Title": "",
-  "ueberuns.value1Text": "",
-  "ueberuns.value2Title": "",
-  "ueberuns.value2Text": "",
-  "ueberuns.value3Title": "",
-  "ueberuns.value3Text": "",
-  "ueberuns.chiefsTitle": "",
-  "ueberuns.chief1Name": "",
-  "ueberuns.chief1Text": "",
-  "ueberuns.chief1List1": "",
-  "ueberuns.chief1List2": "",
-  "ueberuns.chief1List3": "",
-  "ueberuns.chief2Name": "",
-  "ueberuns.chief2Text": "",
-  "ueberuns.chief2List1": "",
-  "ueberuns.chief2List2": "",
-  "ueberuns.chief2List3": "",
-  "ueberuns.equipmentTitle": "",
-  "ueberuns.equipmentText": "",
-  "ueberuns.team1Name": "",
-  "ueberuns.team1Role": "",
-  "ueberuns.team1Lang": "",
-  "ueberuns.team2Name": "",
-  "ueberuns.team2Role": "",
-  "ueberuns.team2Lang": "",
-  "ueberuns.team3Name": "",
-  "ueberuns.team3Role": "",
-  "ueberuns.team3Lang": "",
+  "allgemeinmedizin.chronicText2": "Hastalarımızı uzun vadede destekliyor, tedavi planlarını bireysel olarak uyarlıyor ve uzmanlarla yakın işbirliği içinde çalışıyoruz. Böylece karmaşık hastalık süreçlerinde bile en iyi bakımı almanızı sağlıyoruz.",
+  
+  "innereMedizin.heroTitle": "Dahiliye",
+  "innereMedizin.heroText": "Dahiliye bölümümüz, en modern tanı yöntemleri, köklü deneyim ve kişiye özel bakım sunar. Kalp, akciğer, karaciğer, böbrek ve metabolizma gibi iç organ hastalıklarıyla ilgileniyoruz – akut şikayetlerden uzun süreli tedaviye kadar.",
+  "innereMedizin.diagnosticsTitle": "Tanı ve Fonksiyon Testleri",
+  "innereMedizin.diagnostics1": "EKG ve uzun süreli EKG",
+  "innereMedizin.diagnostics2": "24 saatlik tansiyon ölçümü",
+  "innereMedizin.diagnostics3": "Akciğer fonksiyon testi (spirometri)",
+  "innereMedizin.diagnostics4": "Efor testleri",
+  "innereMedizin.diagnostics5": "Karın organları ve tiroid ultrasonu (sonografi)",
+  "innereMedizin.diagnostics6": "Kendi laboratuvarımızda kan testleri",
+  "innereMedizin.diagnostics7": "Kalp-damar tanısı",
+  "innereMedizin.diagnostics8": "Kılavuzlara uygun koruyucu muayeneler",
+  "innereMedizin.preventionTitle": "Koruyucu Sağlık ve Erken Tanı",
+  "innereMedizin.preventionText": "Yüksek tansiyon, diyabet veya kalp ritim bozuklukları gibi hastalıklar genellikle sinsi ilerler. Düzenli koruyucu muayeneler, erken tanı için anahtardır. Check-up, tarama programları ve risk faktörleri hakkında danışmanlık sunuyoruz – böylece uzun vadede sağlıklı kalırsınız.",
+  "innereMedizin.therapyTitle": "Tedavi ve Uzun Süreli Takip",
+  "innereMedizin.therapyText1": "Hastalarımıza sadece akut hastalıklarda değil, kronik süreçlerde de destek oluyoruz. Bireysel tedavi planları geliştiriyor ve bunları mevcut sağlık durumuna göre düzenli olarak uyarlıyoruz.",
+  "innereMedizin.therapyText2": "Karmaşık klinik tablolar için uzmanlarla yakın işbirliği içinde çalışıyoruz. Böylece uzun vadede en iyi tıbbi bakımı almanızı sağlıyoruz.",
+  "chirurgie.heroTitle": "Cerrahi",
+  "chirurgie.heroText": "Kliniğimizde çok çeşitli küçük cerrahi işlemler sunuyoruz. Yara bakımı ve eklem enjeksiyonlarından – en yüksek tıbbi standartlarda yerinde tedavi.",
+  "chirurgie.proceduresTitle": "Küçük Cerrahi İşlemler",
+  "chirurgie.procedure1": "Cilt lezyonlarının çıkarılması (ör. siğiller, benler)",
+  "chirurgie.procedure2": "Apse ve iltihap tedavisi",
+  "chirurgie.procedure3": "Küçük kesik ve yırtıkların tedavisi",
+  "chirurgie.procedure4": "Lipom ve kistlerin çıkarılması",
+  "chirurgie.procedure5": "Tırnak cerrahisi (ör. batık tırnaklar)",
+  "chirurgie.procedure6": "Küçük doku örnekleri (biyopsiler)",
+  "chirurgie.procedure7": "Küçük kazalardan sonra tedavi",
+  "chirurgie.procedure8": "Ayaktan işlemler sonrası bakım",
+  "chirurgie.woundTitle": "Yara Bakımı & Kronik Yaralar",
+  "chirurgie.woundText": "Akut ve kronik yaralar profesyonel, genellikle uzun süreli tedavi gerektirir. Kesik, yırtık ve sıyrıkların tedavisi, yanık yaralarının bakımı ve kronik yaralar için modern yara tedavisi sunuyoruz (ör. bacak ülseri, diyabetik ayak sendromu). Bireysel yöntemler kullanıyor ve gerekirse uzman merkezlerle yakın işbirliği yapıyoruz.",
+  "chirurgie.jointTitle": "Eklem Enjeksiyonları & Takip",
+  "chirurgie.jointText1": "Osteoartrit, iltihap veya yaralanmalara bağlı eklem ağrıları, hedefe yönelik enjeksiyonlarla etkili şekilde tedavi edilebilir.",
+  "chirurgie.jointText2": "Enflamasyon önleyici ilaçlar veya hyaluronik asit ile eklem enjeksiyonları sunuyor ve tüm tedavi sürecinde yakın takip ve bakım sağlıyoruz.",
+  "ueberuns.whoTitle": "Biz Kimiz",
+  "ueberuns.whoText1": "Dr. Kerim Muayenehanesi, en yüksek bilimsel standartlarda modern, hasta odaklı aile hekimliği hizmeti sunar. Amacımız, önleyici bakımdan akut tedaviye ve kronik hastalıkların uzun vadeli takibine kadar tüm sağlık konularında size ve ailenize güvenilir bir partner olmaktır.",
+  "ueberuns.whoText2": "Uluslararası doktor ekibimiz, çeşitli tıbbi uzmanlıklardan uzun yıllara dayanan deneyimi bir araya getirir. En son tanı yöntemleri, dijital hizmetler ve kişisel, empatik bakım sunuyoruz. Muayenehanemizde sadece hasta değil, bireysiniz – bireysel ihtiyaçlarınız ve yaşam koşullarınızla.",
+  "ueberuns.whoText3": "Birçok dil konuşuyoruz ve açık, güvene dayalı iletişime büyük önem veriyoruz. Sağlığınız ve refahınız bizim için en önemli önceliktir.",
+  "ueberuns.philosophieTitle": "Felsefemiz & Değerlerimiz",
+  "ueberuns.philosophieText": "Sağlığa bütüncül bakıyoruz: Önleme, hızlı tanı ve bireysel tedavi odak noktamızdır. Amacımız, en son tıbbı kişisel bakım ile birleştirerek hastalarımızın sadece tıbbi değil, insani olarak da en iyi şekilde bakılmasını sağlamaktır.",
+  "ueberuns.value1Title": "Bütünsellik",
+  "ueberuns.value1Text": "İnsanı beden, zihin ve ruhun birliği olarak görüyoruz. Önleme, tanı ve tedavi size özel olarak uyarlanır.",
+  "ueberuns.value2Title": "İnovasyon",
+  "ueberuns.value2Text": "Modern teknoloji, dijital hizmetler ve en son bilimsel bulguları en iyi bakım için kullanıyoruz.",
+  "ueberuns.value3Title": "Empati",
+  "ueberuns.value3Text": "Zaman ayırıyor, dinliyor ve size köken, yaş veya yaşam durumu fark etmeksizin saygı ve takdirle yaklaşıyoruz.",
+  "ueberuns.chiefsTitle": "Başhekimler",
+  "ueberuns.chief1Name": "Dr. med. Bahtiyar Kerim, MHBA",
+  "ueberuns.chief1Text": "Dahili tanı ve acil tıp alanında uzmanlaşmış aile hekimi. Dr. Kerim, hassas tanısı, sakin tavrı ve zor durumlarda bile soğukkanlı kalabilme yeteneğiyle tanınır. Ekibin sürekli eğitimi ve yenilikçi tedavi yöntemlerinin uygulanması için çalışır.",
+  "ueberuns.chief1List1": "Klinik ve muayenehanede uzun yıllar deneyim",
+  "ueberuns.chief1List2": "Birçok tıbbi dernekte üye",
+  "ueberuns.chief1List3": "Almanca, Bulgarca, Türkçe, İngilizce, Sırp-Hırvatça konuşur",
+  "ueberuns.chief2Name": "Mag. med. univ. Sof. Ibrahim Kerim",
+  "ueberuns.chief2Text": "Cerrahi işlemler ve tanı alanında uzmanlaşmış aile hekimi. Dr. Ibrahim Kerim, hassas çalışmayı büyük empatiyle birleştirir. Hastaları, açık iletişimini ve dikkatli takibini takdir eder.",
+  "ueberuns.chief2List1": "Ayakta ve yatarak tedavide deneyim",
+  "ueberuns.chief2List2": "Cerrahi alanında düzenli eğitimler",
+  "ueberuns.chief2List3": "Almanca, Bulgarca, Türkçe, İngilizce, Sırp-Hırvatça konuşur",
+  "ueberuns.equipmentTitle": "Donanımımız & Ekibimiz",
+  "ueberuns.equipmentText": "Muayenehanemiz modern tıbbi teknolojiyle donatılmıştır: ultrason, EKG, akciğer fonksiyonu, dijital röntgen ve daha fazlası. Tıbbi asistanlardan oluşan güler yüzlü ekibimiz, sorunsuz bir süreç ve hoş bir ortam sağlar.",
+  "ueberuns.team1Name": "Georg Rumin",
+  "beschneidungen.heroTitle": "Sünnet",
+  "beschneidungen.heroText": "Klinikte en modern yöntemlerle ve en yüksek tıbbi güvenlikle profesyonel sünnetler gerçekleştiriyoruz. Bireysel danışmanlık, nazik uygulama ve özenli takip bizim için çok önemlidir.",
+  "beschneidungen.reasonsTitle": "Tıbbi ve kültürel nedenler",
+  "beschneidungen.reason1": "Tıbbi endikasyonlar (ör. fimozis, kronik iltihaplar)",
+  "beschneidungen.reason2": "Gelişmiş hijyen",
+  "beschneidungen.reason3": "Bazı enfeksiyon risklerinin azaltılması",
+  "beschneidungen.reason4": "Kültürel ve dini nedenler",
+  "beschneidungen.reason5": "Ailevi ve geleneksel nedenler",
+  "beschneidungen.reason6": "Bireysel isteklere göre uygulama",
+  "beschneidungen.processTitle": "Süreç ve Güvenlik",
+  "beschneidungen.processText": "İşlem öncesi tüm soruların yanıtlandığı detaylı bir danışmanlık yapılır. İşlemin kendisi steril koşullarda ve nazik anesteziyle gerçekleştirilir. Güvenlik, ağrısızlık ve hastalarımız için güven ortamı en büyük önceliğimizdir.",
+  "beschneidungen.aftercareTitle": "Takip ve Bakım",
+  "beschneidungen.aftercareText1": "Sünnet sonrası özenli takip çok önemlidir. Düzenli kontroller sağlıyoruz ve sorularınız için her zaman buradayız.",
+  "beschneidungen.aftercareText2": "Amaç hızlı iyileşme, en iyi sonuçlar ve maksimum güvenliktir. Gerekirse tedaviyi iyileşme sürecine göre bireysel olarak uyarlıyoruz.",
+  "terminbuchung.heroTitle": "Randevu Rezervasyonu",
+  "terminbuchung.infoTitle": "Randevu Bilgisi",
+  "terminbuchung.infoText1": "Randevu almak için aşağıdaki iletişim seçeneklerini kullanabilirsiniz.",
+  "terminbuchung.infoText2": "Bize WhatsApp, e-posta veya telefon ile ulaşabilirsiniz.",
+  "terminbuchung.whatsappButton": "WhatsApp'tan yazın",
+  "terminbuchung.emailButton": "E-posta gönder",
+  "terminbuchung.phoneButton": "Ara",
+  "ueberuns.team1Role": "Aile Hekimliği / Akupunktur",
+  "ueberuns.team1Lang": "Almanca, Lehçe konuşur",
+  "ueberuns.team2Name": "Günay Najafova",
+  "ueberuns.team2Role": "Aile Hekimliği",
+  "ueberuns.team2Lang": "Almanca, Türkçe, Azerice, Rusça konuşur",
+  "ueberuns.team3Name": "Bülent Alkan",
+  "ueberuns.team3Role": "Aile Hekimliği",
+  "ueberuns.team3Lang": "Bulgarca, Türkçe, Almanca konuşur",
   "leistungen.title": "Hizmetlerimiz",
   "leistungen.allgemeinmedizin.title": "Aile Hekimliği",
   "leistungen.allgemeinmedizin.desc": "Tüm aile için aile hekimliği bakımı, koruyucu muayeneler ve akut tedavi.",
@@ -179,6 +188,7 @@
   "contact.tel1": "Telefon: +359 123 456 789",
   "contact.tel2": "Cep: +359 987 654 321",
   "contact.email": "E-posta: info@drkerim.bg",
+    
   "contact.address1": "Adres: Ana Cadde 123, Sofya",
   "contact.address2": "Plovdiv Şubesi: Sağlık Sokak 45",
   "contact.address3": "Varna Şubesi: Deniz Sokak 67",
@@ -201,6 +211,11 @@
   "pageindicator.chirurgie": "Cerrahi",
   "pageindicator.beschneidungen": "Sünnet",
   "pageindicator.ueber_uns": "Hakkımızda",
-  "pageindicator.kontakt": "İletişim",
-  "pageindicator.termin_buchen": "Randevu Al"
+  "pageindicator.termin_buchen": "Randevu Al",
+  
+  "bestellung.heroTitle": "Sipariş Formları",
+  "bestellung.infoTitle": "Yeni Sipariş Sistemi Geliştiriliyor",
+  "bestellung.infoText": "Şu anda reçete, sevk ve rapor siparişi için yeni bir online sistem geliştiriyoruz.\nO zamana kadar lütfen aşağıdaki iletişim yollarını kullanın:",
+  "bestellung.emailButton": "E-posta",
+  "bestellung.phoneButton": "Telefon: +49 69 870015360"
 }
