--- a/src/locales/bg.json
+++ b/src/locales/bg.json
@@ -1,4 +1,25 @@
-{
+  {
+  "nav.orderForm": "Поръчай формуляри",
+    "footer.slogan1": "Модерна семейна медицинска грижа",
+  "footer.slogan2": "по най-високи стандарти.",
+  "footer.openingHours": "Работно време",
+  "footer.opening.monThu": "Пон–Чет: 07:30–12:00 & 14:30–18:00",
+  "footer.opening.fri": "Пет: 07:30–12:00",
+  "footer.opening.friNote": "само видео консултация",
+      "footer.contact": "Контакт",
+  "footer.phone1": "T: +49 69 870015360",
+  "footer.phone2": "T: +49 69 84 20 81",
+  "footer.fax": "F: +49 69 84 49 72",
+  "footer.email": "E: info@praxiskerim.de",
+  "footer.addressTitle": "Адрес",
+  "footer.address1": "Jacques-Offenbach-Straße 12",
+  "footer.address2": "63069 Offenbach am Main",
+  "footer.copyright": "Кабинет д-р Керим – Всички права запазени",
+  "nav.home": "Начало",
+  "nav.services": "Услуги",
+  "nav.about": "За нас",
+  "nav.contact": "Контакт",
+  "nav.appointment": "Запази час",
   "allgemeinmedizin.heroTitle": "Обща медицина",
   "allgemeinmedizin.heroText": "Общата медицина е сърцето на нашата практика. Ние сме вашата първа точка за контакт при всички здравни въпроси – независимо дали става дума за остри оплаквания, хронични заболявания или профилактика. С модерна диагностика, лично внимание и дългогодишен опит подкрепяме вас и вашето семейство във всяка ситуация.",
   "allgemeinmedizin.focusTitle": "Нашите основни направления",
@@ -15,86 +36,74 @@
   "allgemeinmedizin.chronicTitle": "Хронични заболявания и дългосрочна грижа",
   "allgemeinmedizin.chronicText1": "Много хора живеят с хронични заболявания като диабет, астма или сърдечно-съдови заболявания. Постоянната и надеждна грижа е от решаващо значение за качеството на живот.",
   "allgemeinmedizin.chronicText2": "Подкрепяме нашите пациенти в дългосрочен план, индивидуално адаптираме терапевтичните планове и работим в тясно сътрудничество със специалисти. Така гарантираме, че дори при сложни заболявания ще получите оптимална грижа.",
-  "innereMedizin.heroTitle": "",
-  "innereMedizin.heroText": "",
-  "innereMedizin.diagnosticsTitle": "",
-  "innereMedizin.diagnostics1": "",
-  "innereMedizin.diagnostics2": "",
-  "innereMedizin.diagnostics3": "",
-  "innereMedizin.diagnostics4": "",
-  "innereMedizin.diagnostics5": "",
-  "innereMedizin.diagnostics6": "",
-  "innereMedizin.diagnostics7": "",
-  "innereMedizin.diagnostics8": "",
-  "innereMedizin.preventionTitle": "",
-  "innereMedizin.preventionText": "",
-  "innereMedizin.therapyTitle": "",
-  "innereMedizin.therapyText1": "",
-  "innereMedizin.therapyText2": "",
-  "chirurgie.heroTitle": "",
-  "chirurgie.heroText": "",
-  "chirurgie.proceduresTitle": "",
-  "chirurgie.procedure1": "",
-  "chirurgie.procedure2": "",
-  "chirurgie.procedure3": "",
-  "chirurgie.procedure4": "",
-  "chirurgie.procedure5": "",
-  "chirurgie.procedure6": "",
-  "chirurgie.procedure7": "",
-  "chirurgie.procedure8": "",
-  "chirurgie.woundTitle": "",
-  "chirurgie.woundText": "",
-  "chirurgie.jointTitle": "",
-  "chirurgie.jointText1": "",
-  "chirurgie.jointText2": "",
-  "beschneidungen.heroTitle": "",
-  "beschneidungen.heroText": "",
-  "beschneidungen.reasonsTitle": "",
-  "beschneidungen.reason1": "",
-  "beschneidungen.reason2": "",
-  "beschneidungen.reason3": "",
-  "beschneidungen.reason4": "",
-  "beschneidungen.reason5": "",
-  "beschneidungen.reason6": "",
-  "beschneidungen.processTitle": "",
-  "beschneidungen.processText": "",
-  "beschneidungen.aftercareTitle": "",
-  "beschneidungen.aftercareText1": "",
-  "beschneidungen.aftercareText2": "",
-  "ueberuns.whoTitle": "",
-  "ueberuns.whoText1": "",
-  "ueberuns.whoText2": "",
-  "ueberuns.whoText3": "",
-  "ueberuns.philosophieTitle": "",
-  "ueberuns.philosophieText": "",
-  "ueberuns.value1Title": "",
-  "ueberuns.value1Text": "",
-  "ueberuns.value2Title": "",
-  "ueberuns.value2Text": "",
-  "ueberuns.value3Title": "",
-  "ueberuns.value3Text": "",
-  "ueberuns.chiefsTitle": "",
-  "ueberuns.chief1Name": "",
-  "ueberuns.chief1Text": "",
-  "ueberuns.chief1List1": "",
-  "ueberuns.chief1List2": "",
-  "ueberuns.chief1List3": "",
-  "ueberuns.chief2Name": "",
-  "ueberuns.chief2Text": "",
-  "ueberuns.chief2List1": "",
-  "ueberuns.chief2List2": "",
-  "ueberuns.chief2List3": "",
-  "ueberuns.equipmentTitle": "",
-  "ueberuns.equipmentText": "",
-  "ueberuns.team1Name": "",
-  "ueberuns.team1Role": "",
-  "ueberuns.team1Lang": "",
-  "ueberuns.team2Name": "",
-  "ueberuns.team2Role": "",
-  "ueberuns.team2Lang": "",
-  "ueberuns.team3Name": "",
-  "ueberuns.team3Role": "",
-  "ueberuns.team3Lang": "",
+  
+  "innereMedizin.heroTitle": "Вътрешни болести",
+  "innereMedizin.heroText": "Нашият отдел по вътрешни болести съчетава най-съвременна диагностика, богат опит и индивидуална грижа. Грижим се за заболявания на вътрешните органи като сърце, бели дробове, черен дроб, бъбреци и метаболизъм – от остри оплаквания до дългосрочна терапия.",
+  "innereMedizin.diagnosticsTitle": "Диагностика и функционални изследвания",
+  "innereMedizin.diagnostics1": "ЕКГ и дългосрочно ЕКГ",
+  "innereMedizin.diagnostics2": "24-часово измерване на кръвното налягане",
+  "innereMedizin.diagnostics3": "Тест за белодробна функция (спирометрия)",
+  "innereMedizin.diagnostics4": "Натоварващи тестове",
+  "innereMedizin.diagnostics5": "Ултразвук (сонография) на коремни органи и щитовидна жлеза",
+  "innereMedizin.diagnostics6": "Кръвни изследвания в нашата лаборатория",
+  "innereMedizin.diagnostics7": "Сърдечно-съдова диагностика",
+  "innereMedizin.diagnostics8": "Профилактични прегледи по указания",
+  "innereMedizin.preventionTitle": "Профилактика и ранно откриване",
+  "innereMedizin.preventionText": "Заболявания като високо кръвно налягане, диабет или сърдечни аритмии често се развиват незабелязано. Редовните профилактични прегледи са ключът към ранното откриване. Предлагаме профилактични прегледи, скринингови програми и консултации за рискови фактори – за да останете здрави в дългосрочен план.",
+  "innereMedizin.therapyTitle": "Терапия и дългосрочна грижа",
+  "innereMedizin.therapyText1": "Подкрепяме нашите пациенти не само при остри заболявания, но и при хронични състояния. Разработваме индивидуални терапевтични планове и ги адаптираме редовно към текущото здравословно състояние.",
+  "innereMedizin.therapyText2": "При сложни клинични случаи работим в тясно сътрудничество със специалисти, за да осигурим оптимална грижа. Така гарантираме, че ще получите най-добрата възможна медицинска грижа в дългосрочен план.",
+  "chirurgie.heroTitle": "Хирургия",
+  "chirurgie.heroText": "В нашата практика предлагаме широка гама от малки хирургични процедури. От грижа за рани до ставни инжекции – лекуваме ви на място според най-високите медицински стандарти.",
+  "chirurgie.proceduresTitle": "Малки хирургични процедури",
+  "chirurgie.procedure1": "Премахване на кожни образувания (напр. брадавици, бенки)",
+  "chirurgie.procedure2": "Лечение на абсцеси и възпаления",
+  "chirurgie.procedure3": "Лечение на малки порязвания и разкъсвания",
+  "chirurgie.procedure4": "Премахване на липоми и кисти",
+  "chirurgie.procedure5": "Операция на нокти (напр. врастнали нокти)",
+  "chirurgie.procedure6": "Вземане на малки тъканни проби (биопсии)",
+  "chirurgie.procedure7": "Грижа след малки инциденти",
+  "chirurgie.procedure8": "Грижа след амбулаторни процедури",
+  "chirurgie.woundTitle": "Грижа за рани и хронични рани",
+  "chirurgie.woundText": "Острите и хроничните рани изискват професионално, често дългосрочно лечение. Лекуваме порязвания, разкъсвания и ожулвания, грижим се за изгаряния и прилагаме съвременна терапия при хронични рани (напр. язви на краката, диабетно стъпало). Използваме индивидуално съобразени методи и работим в тясно сътрудничество със специализирани центрове, ако е необходима допълнителна грижа.",
+  "chirurgie.jointTitle": "Ставни инжекции и последваща грижа",
+  "chirurgie.jointText1": "Болките в ставите, причинени от артроза, възпаления или наранявания, могат да се лекуват ефективно с целенасочени инжекции.",
+  "chirurgie.jointText2": "Предлагаме ставни инжекции с противовъзпалителни лекарства или хиалуронова киселина и ви съпровождаме през целия период на лечение с редовен контрол и последваща грижа.",
+  "ueberuns.whoTitle": "Кои сме ние",
+  "ueberuns.whoText1": "Кабинетът на д-р Керим предлага модерна семейна медицинска грижа по най-високи научни стандарти. Нашата цел е да бъдем надежден партньор за вас и вашето семейство във всички здравни въпроси – от профилактика през спешно лечение до дългосрочна грижа при хронични заболявания.",
+  "ueberuns.whoText2": "Нашият международен екип от лекари съчетава дългогодишен опит от различни медицински специалности. Разчитаме на най-съвременна диагностика, дигитални услуги и лична, емпатична грижа. В нашата практика вие не сте просто пациент, а човек – с индивидуални нужди и обстоятелства.",
+  "ueberuns.whoText3": "Говорим няколко езика и държим на откритата, доверителна комуникация. Вашето здраве и благополучие са наш основен приоритет.",
+  "ueberuns.philosophieTitle": "Нашата философия и ценности",
+  "ueberuns.philosophieText": "Възприемаме здравето цялостно: профилактиката, бързата диагностика и индивидуалната терапия са наш приоритет. Нашата цел е да съчетаем най-съвременната медицина с лична грижа, така че нашите пациенти да бъдат добре обгрижени не само медицински, но и лично.",
+  "ueberuns.value1Title": "Холизъм",
+  "ueberuns.value1Text": "Виждаме човека като единство от тяло, ум и душа. Профилактиката, диагностиката и терапията са индивидуално съобразени с вас.",
+  "ueberuns.value2Title": "Иновация",
+  "ueberuns.value2Text": "Използваме съвременни технологии, дигитални услуги и най-новите научни открития за вашата оптимална грижа.",
+  "ueberuns.value3Title": "Емпатия",
+  "ueberuns.value3Text": "Отделяме време, изслушваме ви и ви третираме с уважение и признателност – независимо от произход, възраст или житейска ситуация.",
+  "ueberuns.chiefsTitle": "Главни лекари",
+  "ueberuns.chief1Name": "Д-р Бахтияр Керим, MHBA",
+  "ueberuns.chief1Text": "Специалист по обща медицина с фокус върху вътрешната диагностика и спешната медицина. Д-р Керим е известен със своята прецизна диагностика, спокойствие и способност да запази хладнокръвие дори в трудни ситуации. Ангажиран е с непрекъснатото обучение на екипа и въвеждането на иновативни методи на лечение.",
+  "ueberuns.chief1List1": "Дългогодишен опит в клиника и практика",
+  "ueberuns.chief1List2": "Член на няколко медицински дружества",
+  "ueberuns.chief1List3": "Говори немски, български, турски, английски, сръбско-хърватски",
+  "ueberuns.chief2Name": "Маг. мед. ун. Соф. Ибрахим Керим",
+  "ueberuns.chief2Text": "Специалист по обща медицина с акцент върху хирургичните процедури и диагностиката. Д-р Ибрахим Керим съчетава прецизна работа с голяма емпатия. Пациентите му ценят откритата комуникация и внимателната последваща грижа.",
+  "ueberuns.chief2List1": "Опит в амбулаторната и болничната помощ",
+  "ueberuns.chief2List2": "Редовни обучения в областта на хирургията",
+  "ueberuns.chief2List3": "Говори немски, български, турски, английски, сръбско-хърватски",
+  "ueberuns.equipmentTitle": "Нашето оборудване и екип",
+  "ueberuns.equipmentText": "Нашата практика е оборудвана с модерна медицинска техника: ултразвук, ЕКГ, белодробна функция, дигитален рентген и много други. Нашият приятелски екип от медицински асистенти се грижи за безпроблемния процес и приятната атмосфера.",
+  "ueberuns.team1Name": "Георг Румин",
+  "ueberuns.team1Role": "Обща медицина / Акупунктура",
+  "ueberuns.team1Lang": "Говори немски, полски",
+  "ueberuns.team2Name": "Гюнай Наджафова",
+  "ueberuns.team2Role": "Обща медицина",
+  "ueberuns.team2Lang": "Говори немски, турски, азербайджански, руски",
+  "ueberuns.team3Name": "Бюлент Алкан",
+  "ueberuns.team3Role": "Обща медицина",
+  "ueberuns.team3Lang": "Говори български, турски, немски",
+  
   "leistungen.title": "Нашите услуги",
   "leistungen.allgemeinmedizin.title": "Обща медицина",
   "leistungen.allgemeinmedizin.desc": "Семейна грижа, профилактични прегледи и спешна помощ за цялото семейство.",
@@ -122,32 +131,35 @@
   "about.description": "В кабинета на д-р Керим предлагаме модерна семейна медицинска грижа по най-високи научни стандарти. Нашият международен екип осигурява цялостна грижа – от профилактика и диагностика до спешна и дългосрочна помощ. Ценим личното отношение, бързата достъпност и дигиталните услуги като видео консултации и онлайн поръчки.",
   "about.orderForm": "Формуляр за поръчка",
   "about.whatsappChannel": "WhatsApp канал",
+  "beschneidungen.heroTitle": "Обрязвания",
+  "beschneidungen.heroText": "В нашата практика извършваме професионални обрязвания с най-съвременни методи и най-висока медицинска сигурност. Залагаме на индивидуална консултация, щадящо изпълнение и внимателна последваща грижа.",
+  "beschneidungen.reasonsTitle": "Медицински и културни причини",
+  "beschneidungen.reason1": "Медицински показания (напр. фимоза, хронични възпаления)",
+  "beschneidungen.reason2": "Подобрена хигиена",
+  "beschneidungen.reason3": "Намаляване на риска от определени инфекции",
+  "beschneidungen.reason4": "Културни и религиозни причини",
+  "beschneidungen.reason5": "Семейни и традиционни причини",
+  "beschneidungen.reason6": "Изпълнение според индивидуални желания",
+  "beschneidungen.processTitle": "Процедура и сигурност",
+  "beschneidungen.processText": "Преди процедурата се провежда подробна консултация, в която се отговаря на всички въпроси. Самата процедура се извършва при стерилни условия и с щадяща анестезия. Залагаме на сигурност, безболезненост и доверителна атмосфера за нашите пациенти.",
+  "beschneidungen.aftercareTitle": "Последваща грижа",
+  "beschneidungen.aftercareText1": "След обрязване е важна внимателната последваща грижа. Осигуряваме редовни контролни прегледи и сме на разположение за въпроси.",
+  "beschneidungen.aftercareText2": "Целта е бързо възстановяване, най-добри резултати и максимална сигурност. При нужда адаптираме лечението индивидуално според процеса на възстановяване.",
+  "terminbuchung.heroTitle": "Запазване на час",
+  "terminbuchung.infoTitle": "Информация за записване",
+  "terminbuchung.infoText1": "За да запазите час, използвайте опциите за контакт по-долу.",
+  "terminbuchung.infoText2": "Може да ни пишете по WhatsApp, имейл или да се обадите.",
+  "terminbuchung.whatsappButton": "Пишете в WhatsApp",
+  "terminbuchung.emailButton": "Изпратете имейл",
+  "terminbuchung.phoneButton": "Обадете се",
   "homepage.title": "Кабинет д-р Керим",
   "homepage.subtitle": "Международна семейна медицинска грижа по най-висок научен стандарт",
-  "footer.slogan1": "Модерна семейна медицинска грижа",
-  "footer.slogan2": "по най-високи стандарти.",
-  "footer.openingHours": "Работно време",
-  "footer.opening.monThu": "Пон–Чет: 07:30–12:00 & 14:30–18:00",
-  "footer.opening.fri": "Пет: 07:30–12:00",
-  "footer.opening.friNote": "само видео консултация",
-  "footer.contact": "Контакт",
-  "footer.phone1": "T: +49 69 870015360",
-  "footer.phone2": "T: +49 69 84 20 81",
-  "footer.fax": "F: +49 69 84 49 72",
-  "footer.email": "E: info@praxiskerim.de",
-  "footer.addressTitle": "Адрес",
-  "footer.address1": "Jacques-Offenbach-Straße 12",
-  "footer.address2": "63069 Offenbach am Main",
-  "footer.copyright": "Кабинет д-р Керим – Всички права запазени",
+  
   "allgemeinmedizin": "Обща медицина",
   "innere_medizin": "Вътрешни болести",
   "chirurgie": "Хирургия",
   "beschneidungen": "Обрязвания",
-  "nav.home": "Начало",
-  "nav.services": "Услуги",
-  "nav.about": "За нас",
-  "nav.contact": "Контакт",
-  "nav.appointment": "Запази час",
+  
   "hero.title": "Кабинет д-р Керим",
   "hero.subtitle": "Семейна медицинска грижа по немски стандарти в България",
   "home.servicesTitle": "Нашите услуги",
@@ -179,6 +191,14 @@
   "contact.tel1": "Телефон: +359 123 456 789",
   "contact.tel2": "Мобилен: +359 987 654 321",
   "contact.email": "Имейл: info@drkerim.bg",
+    "pageindicator.home": "Начало",
+    "pageindicator.allgemeinmedizin": "Обща медицина",
+    "pageindicator.innere_medizin": "Вътрешни болести",
+    "pageindicator.chirurgie": "Хирургия",
+    "pageindicator.beschneidungen": "Обрязвания",
+    "pageindicator.ueber_uns": "За нас",
+    "pageindicator.kontakt": "Контакт",
+    "pageindicator.termin_buchen": "Запази час",
   "contact.address1": "Адрес: ул. Главна 123, София",
   "contact.address2": "Филиал Пловдив: ул. Здраве 45",
   "contact.address3": "Филиал Варна: ул. Морска 67",
@@ -195,12 +215,10 @@
   "kontakt.appointmentInfo": "Отделяме време за вашето здраве. Запазете час онлайн – за профилактика, остри оплаквания или консултация. Нашата дигитална система за резервации позволява бързо и лесно планиране, минимизирайки времето за изчакване.",
   "kontakt.digitalTitle": "Дигитални услуги",
   "kontakt.digitalInfo": "Използвайте нашите дигитални услуги за бързо и лесно обслужване – поръчайте рецепти, направления или болнични онлайн или следете новостите чрез нашия WhatsApp канал.",
-  "pageindicator.home": "Начало",
-  "pageindicator.allgemeinmedizin": "Обща медицина",
-  "pageindicator.innere_medizin": "Вътрешни болести",
-  "pageindicator.chirurgie": "Хирургия",
-  "pageindicator.beschneidungen": "Обрязвания",
-  "pageindicator.ueber_uns": "За нас",
-  "pageindicator.kontakt": "Контакт",
-  "pageindicator.termin_buchen": "Запази час"
+  
+  "bestellung.heroTitle": "Формуляри за поръчки",
+  "bestellung.infoTitle": "Нова система за поръчки в разработка",
+  "bestellung.infoText": "В момента разработваме нова онлайн система за поръчка на рецепти, направления и болнични.\nДотогава използвайте следните начини за контакт:",
+  "bestellung.emailButton": "Имейл",
+  "bestellung.phoneButton": "Телефон: +49 69 870015360"
 }
